--- a/Project.html
+++ b/Project.html
@@ -26,7 +26,7 @@
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
-<title>Baha lol</title>
+<title>Project</title><!-- rename it))) -->
 
 <style type="text/css"></style><style type="text/css"></style><script src="./Leviate - HTML5 One Page Parallax Template_files/js" type="text/javascript" async=""></script><script type="text/javascript" src="./Leviate - HTML5 One Page Parallax Template_files/challenge"></script><style type="text/css">
 
